-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 0.7, 0.8
-
Fix Version/s: 0.9.2
-
Component/s: C glib - Compiler, C glib - Library
-
Labels:None
-
Patch Info:Patch Available
1. leaks in binary string
thrift generate the "binary" type to GByteArray pointer. GByteArray must be freed with g_byte_array_unref().
2. not use *_array_free
use *_array_unref function for the code readability
3. leaks in ThriftApplicationException class
ThriftApplicationException class has no finalize function. To free a message attribute in ThriftApplicationException object, attach finalize function.
4. handle a error in thrift_buffered_transport_read_slow()
if read function return a value less than zero, stop read and return.
5. use gethostbyname_r() function instead of gethostbyname()
thrift client for parallel access. change to reentrant function.
6. use SO_LINGER for daemon application
set thrift client socket's SO_LINGER option to {1, 0). for daemon application.