THRIFT-2414 c_glib fix several bug Patch: Jaesang Kim